[project]
name = "pons"
version = "0.5.1"
description = "Async RPC client for Ethereum"
authors = [
    {name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"},
]
dependencies = [
    "httpx>=0.22",
    "eth-account>=0.6",
    "eth-utils>=2",
    "eth-abi>=3.0.1",
    "anyio>=3",
    "setuptools", # required by eth-utils, but it just assumes that it's already installed
]
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"

[project.urls]
homepage = "https://github.com/fjarri/pons"

[project.optional-dependencies]
tests = [
    "pytest>=6",
    "trio>=0.19.0",
    "pytest-trio",
    "pytest-cov",
    "py-solc-x>=1",
    # eth-tester only has pre-releases, so we can't set a range.
    # TODO: make our own mock around Pyevm.
    "eth-tester[pyevm]==0.8.0b3",
    "starlette",
    "hypercorn",
]
docs = [
    "sphinx>=4",
    "furo",
    "sphinxcontrib-trio",
    "setuptools-scm",
]
lint = [
    "mypy>=0.991",
    "trio-typing[mypy]>=0.7.0",
    "black",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.setuptools_scm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
