[project]
name = "pons"
version = "0.7.0"
description = "Async RPC client for Ethereum"
authors = [
    {name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"},
]
dependencies = [
    "httpx>=0.22",
    "eth-account>=0.6",
    "eth-utils>=2",
    "eth-abi>=4",
    "anyio>=3",
    "setuptools", # required by eth-utils, but it just assumes that it's already installed
    "typing_extensions>=4.2"
]
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"

[project.urls]
homepage = "https://github.com/fjarri/pons"

[project.optional-dependencies]
tests = [
    "pytest>=6",
    "trio>=0.19.0",
    "pytest-trio",
    "pytest-cov",
    "py-solc-x>=1",
    # eth-tester only has pre-releases, so we can't set a range.
    # TODO: make our own mock around Pyevm.
    "eth-tester[pyevm]==0.10.0-beta.1",
    "starlette",
    "hypercorn",
    "mypy-extensions>=1"
]
docs = [
    "sphinx>=4",
    "furo",
    "sphinxcontrib-trio",
    "setuptools-scm",
]
lint = [
    "mypy>=1.4",
    "trio-typing[mypy]>=0.9.0",
    "black>=23",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
source-includes = [
    "tests/*.sol",
    "tests/*.py",
    "docs/*.rst",
    "docs/*.py",
    "docs/Makefile",
    ".coveragerc",
    "mypy.ini",
    "pytest.ini",
]

[tool.setuptools_scm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.ruff]
select = ["E", "F", "W", "C", "B", "Q", "I"]
ignore = [
    # It's a stylistic choice. Don't save on matches.
    "C408",
    # It's never a problem unless you mutate function arguments (which is rarely a good idea).
    "B008",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"
